spectec/test/elab/neg/relation-iter-var-premise.spectec
;; Iterating a `var` declaration premise.

syntax foo = nat

relation R: foo |- foo
  hint(input %0)

rule R/iter:
  0 |- 0
  -- (var x : foo)*
